.tempCodeRunnerFile.txt



1/14/2020, 9:14:53 AM
Example.java:23: error: ';' expected
      System.out.println("All numbers are different")
                                                     ^
1 error


1/14/2020, 9:21:47 AM
Example.java:23: error: ';' expected
      System.out.println("All numbers are different")
                                                     ^
1 error
Input first number: Exception in thread "main" java.util.InputMismatchException
	at java.util.Scanner.throwFor(Scanner.java:864)
	at java.util.Scanner.next(Scanner.java:1485)
	at java.util.Scanner.nextInt(Scanner.java:2117)
	at java.util.Scanner.nextInt(Scanner.java:2076)
	at Example.main(Example.java:8)
